[gd_scene load_steps=7 format=3 uid="uid://dem8e1kcd3vo3"]

[ext_resource type="Script" path="res://screen/_standard_editor/standard_editor.gd" id="1_f2q36"]
[ext_resource type="PackedScene" uid="uid://bk265yvb0xqjm" path="res://standard_view/standard_view.tscn" id="1_nper8"]
[ext_resource type="Script" path="res://screen/_standard_editor/panel.gd" id="2_05bg8"]
[ext_resource type="Script" path="res://screen/_standard_editor/scroll_container.gd" id="2_5d0qb"]
[ext_resource type="FontFile" uid="uid://mige7bocvy67" path="res://font/SofiaSansExtraCondensed-Regular.ttf" id="3_wcr5e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wmhtm"]
bg_color = Color(1, 1, 1, 1)

[node name="StandardEditor" type="Node2D" node_paths=PackedStringArray("standard_view")]
script = ExtResource("1_f2q36")
standard_view = NodePath("ScrollContainer/StandardView")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(640, 320)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 468.0
offset_top = 16.0
offset_right = 1244.0
offset_bottom = 632.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wmhtm")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("2_5d0qb")

[node name="StandardView" parent="ScrollContainer" instance=ExtResource("1_nper8")]
layout_mode = 2

[node name="CurrentChord" type="ColorRect" parent="."]
visible = false
offset_left = 267.0
offset_top = -104.0
offset_right = 459.0
offset_bottom = -44.0
color = Color(1, 0.831373, 0, 0.501961)

[node name="SaveAndReturnButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 187.0
offset_top = 16.0
offset_right = 440.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.25, 1, 0.25, 1)
theme_override_fonts/font = ExtResource("3_wcr5e")
theme_override_font_sizes/font_size = 30
text = "Save and return"

[node name="DiscardChangesButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = 16.0
offset_right = 171.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 0.25, 0.25, 1)
theme_override_fonts/font = ExtResource("3_wcr5e")
theme_override_font_sizes/font_size = 30
text = "Discard changes"

[node name="Panel" type="Panel" parent="." node_paths=PackedStringArray("standard_view")]
offset_left = 16.0
offset_top = 76.0
offset_right = 440.0
offset_bottom = 412.0
script = ExtResource("2_05bg8")
standard_view = NodePath("../ScrollContainer/StandardView")

[node name="Chords" type="Control" parent="Panel"]
anchors_preset = 0

[node name="SectionLabelLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -188.0
offset_top = -122.0
offset_right = -83.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_wcr5e")
theme_override_font_sizes/font_size = 30
text = "Section label"

[node name="SectionLabelTextEdit" type="LineEdit" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -140.0
offset_right = 196.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_wcr5e")
theme_override_font_sizes/font_size = 30
placeholder_text = "-"
alignment = 1

[node name="AddChordButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -196.5
offset_top = -60.0
offset_right = 195.5
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(0.25, 1, 0.25, 1)
theme_override_fonts/font = ExtResource("3_wcr5e")
theme_override_font_sizes/font_size = 30
text = "Add chord to measure"

[node name="ExtraOptions" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 16.0
offset_right = 424.0
offset_bottom = 272.0
grow_vertical = 0

[node name="UserFolderButton" type="Button" parent="Panel/ExtraOptions"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 408.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("3_wcr5e")
theme_override_font_sizes/font_size = 30
text = "Open user:// folder"

[node name="BPMLabel" type="Label" parent="Panel/ExtraOptions"]
layout_mode = 0
offset_left = 24.0
offset_top = 112.0
offset_right = 163.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("3_wcr5e")
theme_override_font_sizes/font_size = 30
text = "Beats per minute"

[node name="BPMTextEdit" type="LineEdit" parent="Panel/ExtraOptions"]
layout_mode = 0
offset_left = 228.0
offset_top = 96.0
offset_right = 408.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("3_wcr5e")
theme_override_font_sizes/font_size = 30
placeholder_text = "120"
alignment = 1

[node name="RhythmTypeLabel" type="Label" parent="Panel/ExtraOptions"]
layout_mode = 0
offset_left = 24.0
offset_top = 192.0
offset_right = 129.0
offset_bottom = 228.0
theme_override_fonts/font = ExtResource("3_wcr5e")
theme_override_font_sizes/font_size = 30
text = "Rhythm type"

[node name="RhythmTypeOptionButton" type="OptionButton" parent="Panel/ExtraOptions"]
layout_mode = 0
offset_left = 228.0
offset_top = 176.0
offset_right = 408.0
offset_bottom = 240.0
focus_mode = 0
theme_override_fonts/font = ExtResource("3_wcr5e")
theme_override_font_sizes/font_size = 30
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Straight"
popup/item_1/text = "Swing"
popup/item_1/id = 1

[connection signal="measure_clicked" from="ScrollContainer/StandardView" to="Panel" method="_on_standard_view_measure_clicked"]
[connection signal="pressed" from="SaveAndReturnButton" to="." method="_on_save_and_return_button_pressed"]
[connection signal="pressed" from="DiscardChangesButton" to="." method="_on_discard_changes_button_pressed"]
[connection signal="text_changed" from="Panel/SectionLabelTextEdit" to="Panel" method="_on_section_label_text_edit_text_changed"]
[connection signal="pressed" from="Panel/AddChordButton" to="Panel" method="_on_add_chord_button_pressed"]
[connection signal="pressed" from="Panel/ExtraOptions/UserFolderButton" to="Panel" method="_on_user_folder_button_pressed"]
[connection signal="text_changed" from="Panel/ExtraOptions/BPMTextEdit" to="Panel" method="_on_bpm_text_edit_text_changed"]
[connection signal="item_selected" from="Panel/ExtraOptions/RhythmTypeOptionButton" to="Panel" method="_on_rhythm_type_option_button_item_selected"]
